ingress/web1.svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web1-svc
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080
      #nodePort: 32002
