ingress/web2.svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web2-svc
spec:
  type: NodePort
  selector:
    app: web2
  ports:
    - port: 8080
      #nodePort: 32003
